--- a/index.html
+++ b/index.html
@@ -433,7 +433,48 @@
        </div>
      
    </section>
-  
+   
+<section class="images-section">
+    <div>
+        <div class="container">
+            <h2>Our Lovely Movements</h2>
+            <p>Perceived end knowledge certainly day sweetness why cordially</p>
+        </div>
+    </div>
+    <div class="container">
+        <div class="row mx-auto image-section">
+            <div class="col-6 col-md-4 col-lg-3 grid-item ">
+                <img src="https://eduport.webestica.com/assets/images/about/19.jpg" alt="image" class="move-image">
+            </div>
+            <div class="col-6 col-md-4 col-lg-3 grid-item ">
+                <img src="https://eduport.webestica.com/assets/images/about/20.jpg" alt="image" class="move-image-1">
+            </div>
+            <div class="col-6 col-md-4 col-lg-3 grid-item ">
+                <img src="https://eduport.webestica.com/assets/images/about/17.jpg" alt="image" class="move-image">
+            </div>
+            <div class="col-6 col-md-4 col-lg-3 grid-item .col-lg-2">
+                <img src="https://eduport.webestica.com/assets/images/about/21.jpg" alt="image" class="move-image-1">
+            </div>
+            <!-- </div>
+        <div class="row mx-2 image-section"> -->
+
+            <div class="col-6 col-md-4 col-lg-3 grid-item ">
+                <img src="https://eduport.webestica.com/assets/images/about/23.jpg" alt="image" class="move-image-1">
+            </div>
+            <div class="col-6 col-md-4 col-lg-3 grid-item">
+                <img src="https://eduport.webestica.com/assets/images/about/18.jpg" alt="image"
+                    class="move move-image move-1">
+            </div>
+            <div class="col-6 col-md-4 col-lg-3 grid-item">
+                <img src="https://eduport.webestica.com/assets/images/about/22.jpg" alt="image" class="move-image-1 ">
+            </div>
+            <div class="col-6 col-md-4 col-lg-3 grid-item ">
+                <img src="https://eduport.webestica.com/assets/images/about/16.jpg" alt="image"
+                    class="move move-image move-1">
+            </div>
+        </div>
+    </div>
+</section>
 
 
         <!-- Optional JavaScript; choose one of the two! -->
